--- a/style.css
+++ b/style.css
@@ -33,5 +33,31 @@ body {
 p {
   font-size: 130px;
 }
+.total{
+  margin-left: 50px;
+  height: 80px;
+  width: 170px;
+  background-color:#5b59a7;
+  margin-top: 30px;
+  border-radius: 10px;
+}
+.total-text{
+  font-size: 70px;
+  color: blanchedalmond;
+  text-align: center;
+}
+.clear{
+  height: 80px;
+  width: 170px;
+  background-color: #44437e;
+  margin-left: 50px;
+  margin-top: 30px;
+  border-radius: 10px;
+}
+.clear-text{
+  font-size: 70px;
+  color: blanchedalmond;
+  text-align: center;
+}
 
 /*# sourceMappingURL=style.css.map */
